--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test --watchAll=false",
+  "eject": "react-scripts eject",
+  "storybook": "storybook dev -p 6006",
+  "build-storybook": "storybook build",
+  "prepare": "husky install",
+  "lint": "eslint --ext .js,.jsx,.ts,.tsx src",
+  "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -57,8 +60,13 @@
     "@testing-library/react": "^16.2.0",
     "@types/lodash": "^4.17.15",
     "ajv": "^8.17.1",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-storybook": "^0.11.3",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "prop-types": "^15.8.1",
     "react-scripts": "^5.0.1",
     "storybook": "^8.5.8",
